[gd_scene load_steps=4 format=3 uid="uid://b85lbqfth6gww"]

[ext_resource type="Script" path="res://dialog/text_box.gd" id="1_bq5tg"]
[ext_resource type="Texture2D" uid="uid://dpf67ne5ucta1" path="res://assets/dialogs/dialog_box.png" id="1_jy2ui"]
[ext_resource type="FontFile" uid="uid://bfys7bsj0seti" path="res://assets/dialogs/m6x11plus.ttf" id="2_24pwj"]

[node name="TextBox" type="MarginContainer"]
top_level = true
z_index = 4096
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_bq5tg")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_jy2ui")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Text" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="Text"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929715, 0.929715, 0.929715, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_24pwj")
theme_override_font_sizes/font_size = 44
vertical_alignment = 1

[node name="CharDisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CharDisplayTimer" to="." method="_on_char_display_timer_timeout"]
